--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"No test command\""
   },
   "author": "Santiago Alvarez Rodriguez",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
+  }
 }
