--- a/package.json
+++ b/package.json
@@ -12,8 +12,18 @@
     "babel-core": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "chai": "^3.5.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-if": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^1.5.2",
+    "gulp-util": "^3.0.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^4.1.0"
   },
   "dependencies": {
     "react": "^0.14.7",
