--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
     "vinyl-buffer": "^1.0.0",
