--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learn to build projects in Javascript with Gulp + Browserify",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/gulp build"
+    "clean": "./node_modules/.bin/gulp clean",
+    "build": "./node_modules/.bin/gulp build || npm run clean"
   },
   "author": "Santiago Alvarez Rodriguez",
   "license": "MIT",
@@ -15,6 +16,7 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "chai": "^3.5.0",
     "del": "^2.2.0",
     "eslint": "^2.2.0",
     "gulp": "^3.9.1",
@@ -22,11 +24,13 @@
     "gulp-eslint": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rev": "^7.0.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
+    "mocha": "^2.4.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^4.1.0"
