--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cssnano": "^2.1.1",
     "gulp-eslint": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-inject": "^3.0.0",
